{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 9,
  "lineage": "05f5447a-bcdf-098d-daa6-ccf4cf8bf26b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/networkInterfaces/Testtrail-nic",
            "internal_domain_name_suffix": "q5pizutn0pou1jn3tyjotglrie.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/virtualNetworks/vn1/subnets/svn1"
              }
            ],
            "location": "centralindia",
            "name": "Testtrail-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "demo-resourcegroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/networkSecurityGroups/ns",
            "location": "centralindia",
            "name": "ns",
            "resource_group_name": "demo-resourcegroup",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/networkSecurityGroups/ns/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "ns",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "demo-resourcegroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/virtualNetworks/vn1/subnets/svn1",
            "name": "svn1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demo-resourcegroup",
            "virtual_network_name": "vn1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/virtualNetworks/vn1/subnets/svn1",
            "network_security_group_id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/networkSecurityGroups/ns",
            "subnet_id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/virtualNetworks/vn1/subnets/svn1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d28cde87-d36d-4ddd-a5bd-9e12e9997144",
            "id": "/subscriptions/727569fb-5294-4ca5-9005-466abf5d33f1/resourceGroups/demo-resourcegroup/providers/Microsoft.Network/virtualNetworks/vn1",
            "location": "centralindia",
            "name": "vn1",
            "resource_group_name": "demo-resourcegroup"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}